@@ -1,0 +1,31 @@
+<div id="portal-personaltools-wrapper"
+     i18n:domain="plone">
+
+<h5 class="hiddenStructure" i18n:translate="heading_personal_tools">Personal tools</h5>
+
+<ul id="portal-personaltools"
+    tal:condition="python:view.user_actions or not view.anonymous"
+    class="visualInline">
+    <li tal:condition="not: view/anonymous"><a 
+        id="user-name"
+        tal:attributes="href view/homelink_url"
+        ><img src="" tal:replace="structure context/user.gif" />
+        <span class="visualCaseSensitive"
+             tal:content="view/user_name">
+            John
+        </span
+    ></a></li>
+
+    <tal:actions repeat="action view/user_actions">
+        <li tal:attributes="id string:personaltools-${action/id}">
+            <a href=""
+               tal:attributes="href action/url"
+               tal:content="action/title"
+               i18n:translate="">
+                action title
+            </a>
+        </li>
+    </tal:actions>
+
+</ul>
+</div>
