@@ -1,0 +1,24 @@
+<?xml version="1.0"?>
+<object>
+  <order manager="plone.portaltop" skinname="Plone Classic Theme" based-on="Plone Default">
+    <viewlet name="plone.personal_bar" insert-after="*" />
+    <viewlet name="plone.app.i18n.locales.languageselector" insert-after="*" />
+    <viewlet name="plone.path_bar" insert-after="*" />
+  </order>
+  <order manager="plone.portalheader" skinname="Plone Classic Theme" based-on="Plone Default">
+    <viewlet name="plone.site_actions" insert-after="plone.skip_links" />
+  </order>
+  <hidden manager="plone.portalheader" skinname="Plone Classic Theme">
+    <viewlet name="plone.personal_bar" />
+    <viewlet name="plone.app.i18n.locales.languageselector" />
+  </hidden>
+  <hidden manager="plone.abovecontent" skinname="Plone Classic Theme">
+    <viewlet name="plone.path_bar" />
+  </hidden>
+  <hidden manager="plone.belowcontent" skinname="Plone Classic Theme">
+    <viewlet name="plone.belowcontenttitle.keywords" />
+  </hidden>
+  <hidden manager="plone.portalfooter" skinname="Plone Classic Theme">
+    <viewlet name="plone.site_actions" />
+  </hidden>
+</object>
